Ultra-Elite Phase 7: Free-Tier Resiliency Overhaul - Staggered loading and deferred warming